dmz/authentik-outpost/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: authentik
  name: ak-outpost-authentik-dmz-outpost
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: authentik-outpost
    app.kubernetes.io/instance: dmz-outpost
